--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,69 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="utf-8">
-    <title>Domain Default page</title>
-    <meta name="copyright" content="Copyright 1999-2022. Plesk International GmbH. All rights reserved.">
-    <script src="https://assets.plesk.com/static/default-website-content/public/default-website-index.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Auswertungs Tool für die Hufschuh-App</title>
+    <meta name="description" content="Willkommen zum Auswertungs Tool für die Hufschuh-App. Auswerten und Analyzieren von Hufschuh-Daten einfach gemacht.">
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f7f6;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
+            color: #333;
+        }
+
+        .container {
+            max-width: 600px;
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            color: #2a9d8f;
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
+
+        p {
+            color: #6c757d;
+            font-size: 1.25rem;
+            margin-bottom: 40px;
+        }
+
+        a.button {
+            padding: 12px 24px;
+            font-size: 1.2rem;
+            text-decoration: none;
+            background-color: #2a9d8f;
+            color: white;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+            cursor: pointer;
+        }
+
+        a.button:hover {
+            background-color: #21867a;
+        }
+    </style>
 </head>
 <body>
-    This is a default webpage generated for <script>document.write(location.hostname)</script> by Plesk.
+
+    <div class="container">
+        <h1>Auswertungs Tool für die Hufschuh-App</h1>
+        <p>Willkommen auf der Landingpage des Auswertungs Tools für die Hufschuh-App. Mit diesem Tool können Sie alle relevanten Daten effizient und übersichtlich auswerten.</p>
+        <a href="/pferde" class="button">Zum Auswertungs Tool</a>
+    </div>
+
+    <!-- <script src="https://assets.plesk.com/static/default-website-content/public/default-website-index.js"></script> -->
 </body>
 </html>
